2017-06-25  Bruno Haible  <bruno@clisp.org>

	Bump version number after beta release.
	* version.sh: Bump version number to 2.49.60+.
	* version.h, src/configure: Regenerated.

2017-06-25  Bruno Haible  <bruno@clisp.org>

	Regenerate the POT file.
	* po/*.pot, po/*.po, po/*.gmo: Regenerated through
	"make -f Makefile.devel potfiles".

2017-06-25  Bruno Haible  <bruno@clisp.org>

	Prepare a beta release for translators.
	* version.sh: Bump version number to 2.49.60.
	* version.h, src/configure: Regenerated.

2017-06-25  Bruno Haible  <bruno@clisp.org>

	Update Swedish translation.
	* po/sv.po: Update from Sebastian Rasmussen <sebras@gmail.com>.
	* po/sv.gmo, po/clisplow_sv.*: Regenerated.

2017-06-24  Bruno Haible  <bruno@clisp.org>

	Use newest libffcall.
	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): Point to the libffcall-1.13
	release.
	* aclocal.m4, src/configure: Regenerated.

2017-06-22  Bruno Haible  <bruno@clisp.org>

	Update French translation.
	* po/fr.po: Update from Stéphane Aulery <lkppo@free.fr>.
	* po/fr.gmo, po/clisplow_fr.*: Regenerated.

2017-06-22  Bruno Haible  <bruno@clisp.org>

	Update Swedish translation.
	* po/sv.po: Update from Sebastian Rasmussen <sebras@gmail.com>.
	* po/sv.gmo, po/clisplow_sv.*: Regenerated.

2017-06-19  Bruno Haible  <bruno@clisp.org>

	Remove some obsolete code.
	Reported by Compro Prasad <comproprasad@gmail.com>.
	* lispbibl.d (symbolp): Remove obsolete case that assumes a
	symbol_bit_o.

2017-06-17  Bruno Haible  <bruno@clisp.org>

	Update Swedish translation.
	* po/sv.po: Update from Sebastian Rasmussen <sebras@gmail.com>.
	* po/sv.gmo, po/clisplow_sv.*: Regenerated.

2017-06-15  Bruno Haible  <bruno@clisp.org>

	Avoid warning about restartf_t.
	* lispbibl.d: Include <noreturn.h>.
	(restartf_t): Use _GL_NORETURN_FUNCPTR instead of _Noreturn.
	(quit, reset, unwind_upto): Use _GL_NORETURN_FUNC.
	* spvw.d (quit): Use _GL_NORETURN_FUNC.
	* eval.d (reset, unwind_upto): Likewise.

2017-06-15  Bruno Haible  <bruno@clisp.org>