@@ -107,6 +107,7 @@ User visible changes
   + PCRE-EXEC returns character positions instead of byte positions.
   + Fix COMPILE-FILE-PATHNAME logical pathname handling (bug#677).
   + Streams returned by MAKE-STREAM may be passed to TRUENAME (bug#679).
+  + Do not raise the CLOS:GF-ALREADY-CALLED-WARNING on Gray streams.
 
 
 2.49 (2010-07-07)
